feat: compression middleware

--- a/.github/workflows/router-ci.yaml
+++ b/.github/workflows/router-ci.yaml
@@ -1,6 +1,6 @@
 name: Router CI
 on:
-  pull_request:
+  push:
     paths:
       - "composition-go/**/*"
       - "demo/**/*"
@@ -182,4 +182,3 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}
           image_name: router
           image_description: "Cosmo Router"
-
